--- a/package.json
+++ b/package.json
@@ -56,5 +56,9 @@
     },
     "dependencies": {
         "chalk": "^5.3.0"
+    },
+    "overrides": {
+        "minimatch": "10.2.1",
+        "ajv": "8.18.0"
     }
 }
