--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
     "name": "@arpadroid/logger",
     "type": "module",
     "version": "0.0.1",
-    "exports": "./src/index.mjs",
+    "exports": {
+        ".": {
+            "types": "./dist/@types/types.compiled.d.ts",
+            "import": "./src/index.mjs"
+        }
+    },
     "main": "./src/index.mjs",
     "types": "./src/types.d.ts",
     "files": [
